--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,11 @@
 *.tar.gz
 *.rar
 
+gradlew*
+
+build
+.idea
+.gradle
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
